# cyclocut

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
example/: blob_bridge.c  k_pub.c  k_sub.c  kl_pub.c  kl_sub.c  nb_pub.c  nb_sub.c
example/serda/: blob-subscriber.c  loan-subscriber.c  publisher.c  subscriber.c
idl/: builtin.idl
include/cdds/: cdds_builtin.h  cdds_util.h
src/: builtin.c  cdds_blob.c
